--- a/integration_team_a/build.xml
+++ b/integration_team_a/build.xml
@@ -40,6 +40,31 @@
     </java>
   </target>
 
+  <target name="cucumber-nocolor" depends="compile-steps" description="Run Cucumber">
+    <java classname="org.jruby.Main" fork="true" failonerror="true">
+      <classpath>
+        <fileset dir="lib">
+          <include name="**/*.jar"/>
+        </fileset>
+        <pathelement location="target/test-classes"/>
+      </classpath>
+      <env key="GEM_PATH" value="${gem.home}"/>
+      <jvmarg value="-Dcuke4duke.objectFactory=cuke4duke.internal.jvmclass.PicoFactory"/>
+      <arg value="-r"/>
+      <arg value="cuke4duke"/>
+      <arg value="${cucumber.bin}"/>
+      <arg value="--require"/>
+      <arg value="target/test-classes"/>
+      <arg value="--format"/>
+      <arg value="pretty"/>
+      <arg value="--format"/>
+      <arg value="html"/>
+      <arg value="--out"/>
+      <arg value="target/results.html"/>
+      <arg value="features"/>
+    </java>
+  </target>
+
   <target name="install-deps" depends="download-jars, install-gems" description="Install all dependencies"/>
 
   <target name="download-jars" description="Download jars with ivy">
