--- a/integration_team_a/build.xml
+++ b/integration_team_a/build.xml
@@ -1,36 +1,32 @@
-<project xmlns:ivy="antlib:org.apache.ivy.ant" name="CS321 Team A Integration Tests" default="cucumber" basedir=".">
-	<property name="dotgem.parent" value="${basedir}/lib"/>
-	<property name="gem.home" value="${dotgem.parent}/.gem"/>
-	<property name="cucumber.bin" value="${gem.home}/bin/cucumber"/>
-	<property name="tst-dir" location="target/test-classes" />
-	<property name="TALK" value="true" />
-	<property name="test.reports" value="./target/reports" />
-	<property name="svn.url" value = "http://my-svn.assembla.com/svn/cs320/trunk/Project/src/" />
-	<property name="svnant.jar" value = "~/jars/svnant.jar" />
-	<typedef resource="org/tigris/subversion/svnant/svnantlib.xml" classpath="${svnant.jar}" />
+<project name="CS321 Team A Integration Tests" default="cucumber" basedir=".">
+	<property name="tst-classes" location="target/test-classes" />
+	<property name="tst-reports" value="target/reports" />
+	<property name="svn-url" value = "http://my-svn.assembla.com/svn/cs320/trunk/Project/src/" />
+	<property name="svnant-jar" value = "libs/svnant.jar" />
+	<typedef resource="org/tigris/subversion/svnant/svnantlib.xml" classpath="${svnant-jar}" />
 	
 	<target name = "svn">
-		<delete dir="./src/edu" includeEmptyDirs="true" />
+		<delete dir="src/edu" includeEmptyDirs="true" />
 		<svn javahl="false">
-			<export srcUrl="${svn.url}" destPath = "./src_temp" />
+			<export srcUrl="${svn-url}" destPath = "src_temp" />
 		</svn>
-		<move todir="./src/">
-			<fileset dir="./src_temp" />
+		<move todir="src/">
+			<fileset dir="src_temp" />
 		</move>
 	</target>
 
 	<path id="classpath.base"> </path>
 	<path id="classpath.test">
-		<pathelement location="${tst-dir}" />
+		<pathelement location="${tst-classes}" />
 		<path refid="classpath.base" />
 	</path>
 
 	<target name="junit" depends="compile-steps">
-		<delete dir="${test.reports}" />
-		<mkdir dir="${test.reports}"/>
+		<delete dir="${tst-reports}" />
+		<mkdir dir="${tst-reports}"/>
 		<junit fork="yes" printsummary="yes" haltonfailure="no">
-			<batchtest fork="yes" todir="${test.reports}" >
-				<fileset dir="./target/test-classes">
+			<batchtest fork="yes" todir="${tst-reports}" >
+				<fileset dir="target/test-classes">
 					<include name="**/*AllJUnitTests.class" />
 				</fileset>
 			</batchtest>
@@ -38,11 +34,11 @@
 			<classpath refid="classpath.test" />
 		</junit>
 
-		<junitreport todir="${test.reports}">
-			<fileset dir="${test.reports}">
+		<junitreport todir="${tst-reports}">
+			<fileset dir="${tst-reports}">
 				<include name="TEST-*.xml" />
 			</fileset>
-			<report todir="${test.reports}/junitreport" />
+			<report todir="${tst-reports}/junitreport" />
 		</junitreport>
 
 		<java classname="tests.XMLParser" failonerror="true">
@@ -65,107 +61,9 @@
 		</javac>
 	</target>
 
-	<target name="cucumber" depends="compile-steps" description="Run Cucumber">
-		<java classname="org.jruby.Main" fork="true" failonerror="true">
-			<classpath>
-				<fileset dir="lib">
-					<include name="**/*.jar"/>
-				</fileset>
-				<pathelement location="target/test-classes"/>
-			</classpath>
-			<env key="GEM_PATH" value="${gem.home}"/>
-			<jvmarg value="-Dcuke4duke.objectFactory=cuke4duke.internal.jvmclass.PicoFactory"/>
-			<arg value="-r"/>
-			<arg value="cuke4duke"/>
-			<arg value="${cucumber.bin}"/>
-			<arg value="--require"/>
-			<arg value="target/test-classes"/>
-			<arg value="--color"/>
-			<arg value="--format"/>
-			<arg value="pretty"/>
-			<arg value="--format"/>
-			<arg value="html"/>
-			<arg value="--out"/>
-			<arg value="target/results.html"/>
-			<arg value="features"/>
-		</java>
-	</target>
-
-	<target name="cucumber-nocolor" depends="compile-steps" description="Run Cucumber">
-		<java classname="org.jruby.Main" fork="true" failonerror="true">
-			<classpath>
-				<fileset dir="lib">
-					<include name="**/*.jar"/>
-				</fileset>
-				<pathelement location="target/test-classes"/>
-			</classpath>
-			<env key="GEM_PATH" value="${gem.home}"/>
-			<jvmarg value="-Dcuke4duke.objectFactory=cuke4duke.internal.jvmclass.PicoFactory"/>
-			<arg value="-r"/>
-			<arg value="cuke4duke"/>
-			<arg value="${cucumber.bin}"/>
-			<arg value="--require"/>
-			<arg value="target/test-classes"/>
-			<arg value="--format"/>
-			<arg value="pretty"/>
-			<arg value="--format"/>
-			<arg value="html"/>
-			<arg value="--out"/>
-			<arg value="target/results.html"/>
-			<arg value="features"/>
-		</java>
-	</target>
-
-	<target name="install-deps" depends="download-jars, install-gems" description="Install all dependencies"/>
-
-	<target name="download-jars" description="Download jars with ivy">
-		<ivy:retrieve/>
-	</target>
-
-	<target name="install-gems" description="Install gems">
-		<install-gem gem="cucumber" version="0.4.4" source="http://gems.rubyforge.org/" />
-		<install-gem gem="rspec" version="1.2.9" />
-	</target>
-
-	<macrodef name="install-gem">
-		<attribute name="gem"/>
-		<attribute name="version"/>
-		<attribute name="source" default="http://gems.rubyforge.org/"/>
-
-		<sequential>
-			<java classname="org.jruby.Main" fork="true" failonerror="true">
-				<classpath>
-					<fileset dir="lib">
-						<include name="**/jruby*.jar"/>
-					</fileset>
-				</classpath>
-				<!-- Gems will go into lib/.gems -->
-				<env key="HOME" value="${dotgem.parent}"/>
-				<arg value="-S"/>
-				<arg value="gem"/>
-				<arg value="install"/>
-				<arg value="--no-ri"/>
-				<arg value="--no-rdoc"/>
-				<arg value="--install-dir"/>
-				<arg value="${gem.home}"/>
-				<arg value="--source"/>
-				<arg value="@{source}"/>
-				<arg value="--version"/>
-				<arg value="@{version}"/>
-				<arg value="@{gem}"/>
-			</java>
-		</sequential>
-	</macrodef>
 
 	<target name="clean" description="Delete all generated artifacts">
 		<delete dir="${basedir}/target"/>
-	</target>
-
-	<target name="clean-deps" description="Delete all dependencies">
-		<delete dir="${basedir}/lib/.gem"/>
-		<delete>
-			<fileset dir="${basedir}/lib" includes=".jar"/>
-		</delete>
 	</target>
 
 </project>
